--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+
+      <meta-data 
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyAj3MlIzbDPkbYNba_MCowgi8C4pGAO9lk"/>
+
     </application>
 
 </manifest>
