--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-imei": "^0.1.1",
+    "react-native-maps": "^0.21.0",
     "react-native-mssql": "^0.1.2",
     "react-navigation": "^2.4.1",
     "react-navigation-material-bottom-tabs": "^0.3.0"
